--- a/documentation/docs/intro.mdx
+++ b/documentation/docs/intro.mdx
@@ -2,4 +2,6 @@
 sidebar_position: 1
 ---
 # Introduction
-
+Copilot Clone is an AI pair programmer focused on making sure students are working alongside AI, not having it just complete work for them.
+Copilot Clone suggests helpful code, and then tracks metrics like accuracy of student code or the time they take to accept suggestions. These metrics can provide educators
+with valuable insight on a student's ability to work with AI.
